# grocycode-printpage

./: .gitignore  .python-version  README.md  codesheet.py  grocycode-printpage.code-workspace  grocycode.py  gui.py  interactive.py  layout.schema.json  main.py  pyproject.toml  pysidedeploy.linux.spec  pysidedeploy.macos.spec  pysidedeploy.spec  pysidedeploy.windows.spec  requirements.txt  resources.qrc  romeve_borcade_omaunt.py
.github/workflows/: build-release.yml
i18n/: i18n_de.qm  i18n_de.ts  i18n_en.qm  i18n_en.ts
modules/: config.ui  config_window.py  fonts.py  gui.py  main.ui  main_window.py  utils.py
ui/: barcode.ui  barcode_window.py  main.ui  main_window.py  resources_rc.py
