[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grocycode-printpage"
version = "1.0.8"
description = "GrocyCode Printpage"
readme = "README.md"
requires-python = ">=3.11"

license = "AGPL-3.0-or-later"

authors = [{ name = "Flo Greistorfer" }]

dependencies = [
    "ppf_datamatrix~=0.2",
    "pyside6~=6.11.0",
    "pyside6_addons~=6.11.0",
    "pyside6_essentials~=6.11.0",
    "questionary~=2.1.1",
    "reportlab~=4.4.10",
    "Requests~=2.33.1",
]

[project.optional-dependencies]
dev = ["ruff"]

[project.scripts]
grocycode-printpage = "main:main"

[tool.setuptools]
packages = []

[tool.pyside6-project]
files = ["main.py", "modules", "assets"]
exclude = ["dist", "output"]
